feat: Add Password reset methods
